fixed response css
@480px the two divs don't line up cleanly, why?

--- a/blog-posts/stylesheet/stylesheet.css
+++ b/blog-posts/stylesheet/stylesheet.css
@@ -8,34 +8,32 @@ body {
 	background-color:#BDBDBD;
 }
 
-div{
-	display:inline-block;
-	background-color: #848484;
-	border: 2px white solid;
-	padding: 5%;
-	border-radius: 10px;
+div {
+	border-radius:5px;
+	border:1px solid white;
+	padding:0.5%;
 }
 
 #content{
-	width: 50%;
-	
+	width:80%;
+	float:left;
+	position:relative
+	display:block;
 }
-
 #content img{
-	width:90%;
+	width:65%;
 }
 #sidebar{
-	width: 20%;
+	width:10%;
+	text-align:center;
 	float:right;
-	text-align: center;
 	position:fixed;
-	
-}	
-
-#sidebar img {
-	width: 25%;
+	display:inline-block;
 }
 
+#sidebar img{
+	width:50%;
+}
 #sidebar a {
 	color:white;
 }
@@ -52,23 +50,21 @@ div{
 /*for lower resolution*/
 @media screen and (max-width: 480px){
 	#sidebar {
-		position:relative;
 		width:100%;
-		margin:auto}
+		position:relative;
+		display:block;
+	}
 	#content {
 		width:100%;
-		margin:auto;
-	}
-
-	
+	}	
 }
 
 /*for higher resolution*/
-/*@media screen and (max-width:1000px){
+@media screen and (min-width:1000px){
 	#content{
 		width:70%;
 	}
 	#sidebar{
-		width:30%;
+		width:20%;
 	}
-}*/
+}
